adding of filters and pipeline